--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -5,6 +5,8 @@
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
 
+### Identified risk & threats
+
 | **Risk** | **ISO27799** | 
 |------------------|----------|
 | Unauthenticated access to DXPlanning by secretaries| Unauthorized use of a health information application | 
@@ -12,6 +14,26 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Unauthorized modification of appointment data|Masquerade by insiders|
 |No audit trail for created appointments|Repudiation|
 
+### BPMN AS IS
+
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/6a277f49d47c5f6d50d0e99eb748d1e1f2b7be7d/99_Support-documents/Appointment_scheduling_AS_IS_DXPLANNING.PNG?raw=true)
 *Figure 1 - AS-IS Appointment scheduling (DXPLANNING)*
+
+## 5.0.4 Process 2 – Patient Admission (OASIS+)
+
+Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
+Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
+
+### Identified risk & threats
+
+| **Risk** | **ISO27799** | 
+|------------------|----------|
+|Reception agent accessing full patient record| Unauthorized use of a health information application | 
+|Accidental access to the wrong patient file|User error |
+|Access from shared terminals without authentication|Masquerade by insiders|
+|Potential exposure of patient data|Communications interception|
+|No logging of data access|Repudiation|
+
+[image_alt]()
+
 
