--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -7,7 +7,7 @@ Full patient records are visible regardless of the agent’s role or location, c
 
 ### Identified risk & threats
 
-| **Risk** | **ISO27799** | 
+| **Risk** | **ISO27799 threat** | 
 |------------------|----------|
 | Unauthenticated access to DXPlanning by secretaries| Unauthorized use of a health information application | 
 |Appointment entered for the wrong patient|User error |
@@ -21,12 +21,12 @@ Full patient records are visible regardless of the agent’s role or location, c
 
 ## 5.0.4 Process 2 – Patient Admission (OASIS+)
 
-Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
-Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
+In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
+Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
 
 ### Identified risk & threats
 
-| **Risk** | **ISO27799** | 
+| **Risk** | **ISO27799 threat** | 
 |------------------|----------|
 |Reception agent accessing full patient record| Unauthorized use of a health information application | 
 |Accidental access to the wrong patient file|User error |
@@ -34,6 +34,26 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Potential exposure of patient data|Communications interception|
 |No logging of data access|Repudiation|
 
-[image_alt]()
+### BPMN AS IS
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1a33be9a1c1717da7be00d538d42c3dfd8fd3fd0/99_Support-documents/Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
+*Figure 2 - AS-IS Patient admission (OASIS+)*
+
+
+## 5.0.5 Process 3 - Surgery Planning (QBLOC)
+Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
+Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
+
+### Identified risk & threats
+
+| **Risk** | **ISO27799 threat ** | 
+|------------------|----------|
+|Uncontrolled modification of surgery schedules| Unauthorized use of a health information application | 
+|No validation before saving changes|User error |
+|No audit trail or accountability|Repudiation|
+|Shared credentials between staff|Masquerade by insiders|
+|Incorrect resource allocation impacting surgery|Operator error|
+
+### BPMN AS IS
+![image_alt]()
 
 
