--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -45,7 +45,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 
 ### Identified risk & threats
 
-| **Risk** | **ISO27799 threat ** | 
+| **Risk** | **ISO27799 threat** | 
 |------------------|----------|
 |Uncontrolled modification of surgery schedules| Unauthorized use of a health information application | 
 |No validation before saving changes|User error |
@@ -54,6 +54,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Incorrect resource allocation impacting surgery|Operator error|
 
 ### BPMN AS IS
-![image_alt]()
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f5f0f4401e729ca1a148e1bb15be8bd689001319/99_Support-documents/Surgery_Planning_QBLOC.PNG?raw=true)
 
+*Figure 3 - AS-IS Surgery planning (QBLOC)*
 
