--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -1,11 +1,22 @@
 # 5.0.1 AS IS & TO BE Architecture 
-## 5.0.2 Consultant approach
+## 5.0.1.1 Consultant approach
+The approach to requirements gathering for BPMN diagram creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. The first step involves performing a comprehensive assessment of existing environment. That includes reviewing current identity and access management processes and business through interviews and analysis of organizational documention to map out the current state and understand key priorities. 
+Colaborative workshops are organized with business and technical stakeholders. These sessions aim to clarify operational procedures, collect functional needs from each entity involved, and document pain points and desired improvements. 
+The work is iterative, esuring every voice is heard and all relevant business scenario covered. The information is synthesized into process models and requirements documents, which are then validated with stakeholders. This collaborative validation ensures accuracy and mutual understanding while enabling early identitfication of inconsistencies or overlooked needs. 
+BPMN diagrams are drafted based on validated requirements. Further review sessions are held to presenet the diagrams, allowing for all stakeholder feedback and iterative refinement until a common, operationally viable view is reached. 
+All final diagrams are archived and shared as deliverables, ensuring that the functional vision is traceable and can serve both implementation and future process optimization work. 
 
-## 5.0.3 Process 1 – Appointment Scheduling (DXPlanning)
+## 5.0.2 Process 1 – Appointment Scheduling (DXPlanning)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
+## 5.0.2.1 Actors 
+- Patient
+- Medical secretary
 
-### Identified risk & threats
+## 5.0.2.2 Systems involved 
+- DXPlanning
+
+## 5.0.2.3 Identified risks & ISO27799 threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -14,17 +25,22 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Unauthorized modification of appointment data|Masquerade by insiders|
 |No audit trail for created appointments|Repudiation|
 
-### BPMN AS IS
+## 5.0.2.4 BPMN AS IS
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/6a277f49d47c5f6d50d0e99eb748d1e1f2b7be7d/99_Support-documents/Appointment_scheduling_AS_IS_DXPLANNING.PNG?raw=true)
 *Figure 1 - AS-IS Appointment scheduling (DXPLANNING)*
 
-## 5.0.4 Process 2 – Patient Admission (OASIS+)
-
+## 5.0.3 Process 2 – Patient Admission (OASIS+)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
+## 5.0.3.1 Actors 
+- Patient
+- Reception agent
 
-### Identified risk & threats
+## 5.0.3.2 Systems invovled 
+- Oasis+ 
+
+## 5.0.3.3 Identified risks & ISO27799 threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -34,16 +50,23 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Potential exposure of patient data|Communications interception|
 |No logging of data access|Repudiation|
 
-### BPMN AS IS
+### 5.0.3.4 BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1a33be9a1c1717da7be00d538d42c3dfd8fd3fd0/99_Support-documents/Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
 *Figure 2 - AS-IS Patient admission (OASIS+)*
 
 
-## 5.0.5 Process 3 - Surgery Planning (QBLOC)
+## 5.0.4 Process 3 - Surgery Planning (QBLOC)
 Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
 Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
 
-### Identified risk & threats
+## 5.0.4.1 Actors 
+- Surgeon
+- Anesthetist
+- Room coordinator
+
+## 5.0.4.2 Systems involved
+- OASIS+
+### 5.0.4.3 Identified risk & threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -53,8 +76,30 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Shared credentials between staff|Masquerade by insiders|
 |Incorrect resource allocation impacting surgery|Operator error|
 
-### BPMN AS IS
+### 5.0.4.4 BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f5f0f4401e729ca1a148e1bb15be8bd689001319/99_Support-documents/Surgery_Planning_QBLOC.PNG?raw=true)
 
 *Figure 3 - AS-IS Surgery planning (QBLOC)*
+
+## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
+Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
+The process lacks digital signature enforcement, leading to potential identity misuse and non-compliance with eHealth and Recip-e standards.
+## 5.0.5.1 Actors 
+- physician 
+## 5.0.5.2 System involved 
+### 5.0.5.3 identified risks & ISO27799 threats 
+
+| **Risks** | **ISO27799 threat** | 
+|------------------|----------|
+|Prescription issued by unauthenticated doctor| Masquerade by insiders | 
+|Manual validation of therapeutic link|User error |
+|No digital signature|Repudiation|
+|Lack of traceability for prescritpion Unauthorized use of a health information application|
+|Transmission without encryption|Communication interception|
+
+### 5.0.5.4 BPMN AS IS 
+
+
+
+
 
