--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -99,7 +99,7 @@ The process lacks digital signature enforcement, leading to potential identity m
 
 ### 5.0.5.4 BPMN AS IS 
 
-
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/95ddd7e675a8b7c16fd5c132d26186274ff5755f/Patient_prescription_ASIS.PNG?raw=true)
 
 
 
