--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -30,6 +30,9 @@ Full patient records are visible regardless of the agent’s role or location, c
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/6a277f49d47c5f6d50d0e99eb748d1e1f2b7be7d/99_Support-documents/Appointment_scheduling_AS_IS_DXPLANNING.PNG?raw=true)
 *Figure 1 - AS-IS Appointment scheduling (DXPLANNING)*
 
+## 5.0.2.5 BPMN TO BE 
+
+
 ## 5.0.3 Process 2 – Patient Admission (OASIS+)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
