--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -31,7 +31,8 @@ Full patient records are visible regardless of the agent’s role or location, c
 *Figure 1 - AS-IS Appointment scheduling (DXPLANNING)*
 
 ## 5.0.2.5 BPMN TO BE 
-
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/e9073dd8539aa8be92b2d72aa547c6324a961cd7/99_Support-documents/Appointment_scheduling_TOBE.PNG?raw=true)
+*Figure 2 - TO-BE Appointment scheduling (DXPLANNING)*
 
 ## 5.0.3 Process 2 – Patient Admission (OASIS+)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
