--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -34,6 +34,14 @@ Full patient records are visible regardless of the agent’s role or location, c
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/e9073dd8539aa8be92b2d72aa547c6324a961cd7/99_Support-documents/Appointment_scheduling_TOBE.PNG?raw=true)
 *Figure 2 - TO-BE Appointment scheduling (DXPLANNING)*
 
+| **Process Step** | **Solution** | **Benefit** |
+|------------------|----------|----------|
+|Workstation Login| Personal account with enhanced MFA (badge + PIN code) | Strengthened authentication security reducing unauthorized access | 
+| SSO Authentication| SSO with OAuth 2.0 + OpenID Connect| Seamsless user experience with centralized and secure authentication |
+|Access to DxPlanning| Using SSO for session initiation| Quick and secure access to the application, less repetitive logins|
+|Access Rights management (RBAC| RBAC applied for “medical secretary” role (read, write, modify, create patient| Precise permission control aligned with job function|
+|Contextual Access Control (ABAC)| ABAC rules applied (“no medical content allowed”)|Protection of sensitive medical data ensuring confidentiality compliance|
+
 ## 5.0.3 Process 2 – Patient Admission (OASIS+)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
