--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -34,6 +34,8 @@ Full patient records are visible regardless of the agent’s role or location, c
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/e6bc13ffde27eb2ddef8c2c9b5897f032bed93e0/99_Support-documents/Appointment_scheduling_DXPLANNING_TOBE.PNG?raw=true)
 *Figure 2 - TO-BE Appointment scheduling (DXPLANNING)*
 
+## 5.0.2.6 Benefits
+
 | **Process Step** | **Solution** | **Benefit** |
 |------------------|----------|----------|
 |Workstation Login| Personal account with enhanced MFA (badge + PIN code) | Strengthened authentication security reducing unauthorized access | 
