--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -68,6 +68,8 @@ Full patient records are visible regardless of the agent’s role or location, c
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1a33be9a1c1717da7be00d538d42c3dfd8fd3fd0/99_Support-documents/Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
 *Figure 2 - AS-IS Patient admission (OASIS+)*
 
+## 5.0.3.5 BPMN TO BE 
+## 5.°.3.6 Benefits
 
 ## 5.0.4 Process 3 - Surgery Planning (QBLOC)
 Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
