--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -69,7 +69,10 @@ Full patient records are visible regardless of the agent’s role or location, c
 *Figure 2 - AS-IS Patient admission (OASIS+)*
 
 ## 5.0.3.5 BPMN TO BE 
-## 5.°.3.6 Benefits
+This model complies with recommendations for identity vigilance, user access management and rights administration within a modern hospital. It significantly improves the security, traceability and compliance of the patient care process.
+
+
+## 5.0.3.6 Benefits
 
 ## 5.0.4 Process 3 - Surgery Planning (QBLOC)
 Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
