--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -65,7 +65,7 @@ Full patient records are visible regardless of the agent’s role or location, c
 |No logging of data access|Repudiation|
 
 ### 5.0.3.4 BPMN AS IS
-![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1a33be9a1c1717da7be00d538d42c3dfd8fd3fd0/99_Support-documents/Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/8c01666a69f1a16e693bbd48a7d8e419f5bb6250/99_Support-documents/Process_n%C2%B02_Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
 *Figure 2 - AS-IS Patient admission (OASIS+)*
 
 ## 5.0.3.5 BPMN TO BE 
