--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -71,7 +71,7 @@ Full patient records are visible regardless of the agent’s role or location, c
 ## 5.0.3.5 BPMN TO BE 
 This model complies with recommendations for identity vigilance, user access management and rights administration within a modern hospital. It significantly improves the security, traceability and compliance of the patient care process.
 
-![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1e9fafe04b86a46728858bb6132e2f5f66216e54/99_Support-documents/Process_n%C2%B02_Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f894bf3acef321a43857573e09d02fd9b979f98e/99_Support-documents/Patient_admission_OASIS%2B_TOBE.PNG?raw=true)
 
 ## 5.0.3.6 Benefits
 
