--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -75,6 +75,16 @@ This model complies with recommendations for identity vigilance, user access man
 
 ## 5.0.3.6 Benefits
 
+This table outlines the secured patient admission process enhanced with IAM (Okta), centralized identity management (IDP), and privileged access management (PAM) for improved security, compliance, and patient data integrity in a hospital setting.
+| **Process Step** | **Solution** | **Benefit** |
+|------------------|----------|----------|
+| Patient is pre-registered| Receptionist agent logs in with MFA via Okta (IDP)| Enhanced security with strong authentication and access traceability | 
+| Access OASIS+ system| Single sign-on (SSO) with OAuth 2.0 + OIDC, role-based access control (RBAC) and segregation of duties (SoD) enforcement| Fine-grained access control preventing unauthorized data access|
+| Search for patient record | Verify using national ID number, name, and date of birth| Accurate patient identification, reducing errors|
+| Patient record not found| Create new administrative patient file with validation via national registry| Ensure data reliability and regulatory compliance | 
+| Verify insurance coverage | OASIS+ checks patient’s insurance status | Confirm valid insurance to prevent billing issues|
+| Confirm admission | Finalize admission with logged operations| Complete audit trail for accountability and compliance|
+
 ## 5.0.4 Process 3 - Surgery Planning (QBLOC)
 Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
 Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
