--- a/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
+++ b/05_Analysis-and-Design/5.0_AS_IS_and_TO_BE_Architecture.md
@@ -66,12 +66,13 @@ Full patient records are visible regardless of the agent’s role or location, c
 
 ### 5.0.3.4 BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/8c01666a69f1a16e693bbd48a7d8e419f5bb6250/99_Support-documents/Process_n%C2%B02_Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
-*Figure 2 - AS-IS Patient admission (OASIS+)*
+*Figure 3 - AS-IS Patient admission (OASIS+)*
 
 ## 5.0.3.5 BPMN TO BE 
 This model complies with recommendations for identity vigilance, user access management and rights administration within a modern hospital. It significantly improves the security, traceability and compliance of the patient care process.
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f894bf3acef321a43857573e09d02fd9b979f98e/99_Support-documents/Patient_admission_OASIS%2B_TOBE.PNG?raw=true)
+*Figure 4 - TO BE - Patient admission (OASIS+)*
 
 ## 5.0.3.6 Benefits
 
@@ -109,7 +110,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 ### 5.0.4.4 BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f5f0f4401e729ca1a148e1bb15be8bd689001319/99_Support-documents/Surgery_Planning_QBLOC.PNG?raw=true)
 
-*Figure 3 - AS-IS Surgery planning (QBLOC)*
+*Figure 5 - AS-IS Surgery planning (QBLOC)*
 
 ## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
