--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -1,4 +1,4 @@
-# 5.0.1 AS IS & TO BE Architecture 
+# 5.0.1 AS IS & TO BE BPMN 
 ## 5.0.1.1 Consultant approach
 The approach to requirements gathering for BPMN diagram creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. The first step involves performing a comprehensive assessment of existing environment. That includes reviewing current identity and access management processes and business through interviews and analysis of organizational documention to map out the current state and understand key priorities. 
 Colaborative workshops are organized with business and technical stakeholders. These sessions aim to clarify operational procedures, collect functional needs from each entity involved, and document pain points and desired improvements. 
