--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -108,7 +108,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Incorrect resource allocation impacting surgery|Operator error|
 
 ### 5.0.4.4 BPMN AS IS
-![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f5f0f4401e729ca1a148e1bb15be8bd689001319/99_Support-documents/Surgery_Planning_QBLOC.PNG?raw=true)
+![image_alt]
 
 *Figure 5 - AS-IS Surgery planning (QBLOC)*
 
