--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -108,7 +108,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Incorrect resource allocation impacting surgery|Operator error|
 
 ### 5.0.4.4 BPMN AS IS
-![image_alt]
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/7df9452b8d85afe56df40b0a57c951db065bd53a/Sugery_planning_QBLOC_TO-BE.PNG?raw=true)
 
 *Figure 5 - AS-IS Surgery planning (QBLOC)*
 
