--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -1,7 +1,7 @@
 # 5.0.1 AS IS & TO BE BPMN 
 ## 5.0.1.1 Consultant approach
 The approach to requirements gathering for BPMN diagram creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. The first step involves performing a comprehensive assessment of existing environment. That includes reviewing current identity and access management processes and business through interviews and analysis of organizational documention to map out the current state and understand key priorities. 
-Colaborative workshops are organized with business and technical stakeholders. These sessions aim to clarify operational procedures, collect functional needs from each entity involved, and document pain points and desired improvements. 
+Collaborative workshops are organized with business and technical stakeholders. These sessions aim to clarify operational procedures, collect functional needs from each entity involved, and document pain points and desired improvements. 
 The work is iterative, esuring every voice is heard and all relevant business scenario covered. The information is synthesized into process models and requirements documents, which are then validated with stakeholders. This collaborative validation ensures accuracy and mutual understanding while enabling early identitfication of inconsistencies or overlooked needs. 
 BPMN diagrams are drafted based on validated requirements. Further review sessions are held to presenet the diagrams, allowing for all stakeholder feedback and iterative refinement until a common, operationally viable view is reached. 
 All final diagrams are archived and shared as deliverables, ensuring that the functional vision is traceable and can serve both implementation and future process optimization work. 
@@ -77,6 +77,7 @@ This model complies with recommendations for identity vigilance, user access man
 ## 5.0.3.6 Benefits
 
 This table outlines the secured patient admission process enhanced with IAM (Okta), centralized identity management (IDP), and privileged access management (PAM) for improved security, compliance, and patient data integrity in a hospital setting.
+
 | **Process Step** | **Solution** | **Benefit** |
 |------------------|----------|----------|
 | Patient is pre-registered| Receptionist agent logs in with MFA via Okta (IDP)| Enhanced security with strong authentication and access traceability | 
