--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -113,6 +113,9 @@ Surgery schedules can be modified without validation or traceability, leading to
 
 *Figure 5 - AS-IS Surgery planning (QBLOC)*
 
+### 5.0.4.5 BPMN TO BE 
+### 5.0.4.6 Benefits 
+
 ## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
 The process lacks digital signature enforcement, leading to potential identity misuse and non-compliance with eHealth and Recip-e standards.
