--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -114,7 +114,84 @@ Surgery schedules can be modified without validation or traceability, leading to
 *Figure 5 - AS-IS Surgery planning (QBLOC)*
 
 ### 5.0.4.5 BPMN TO BE 
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/764fa900541d19760ccedf748e89bb78426925f3/99_Support-documents/Surgery_planning_QBLOC_TO-BE.PNG?raw=true)
+*Figure 6 - TO-BE Surgery planning (QBLOC)*
+
 ### 5.0.4.6 Benefits 
+This table details the secured and auditable surgical planning process in QBLOC, aligned with IGA, IDP, and PAM best practices to improve security, coordination, and compliance in the hospital surgical workflow.
+| **Process Step** | **Solution** | **Benefit** |
+|------------------|----------|----------|
+| Surgery request initiated | Surgeon authenticates to QBLOC using Okta SSO and OAuth 2.0 + OIDC | Secure, logged surgeon access ensuring accountability| 
+| Surgery request entry| Surgeon enters intervention details, estimated duration, equipment, priority| Accurate, standardized recording of surgery needs|
+| Patient identity verification | Automated verification within QBLOC and query to OASIS+ system| Ensures correct patient and episode, reducing errors|
+| Operating room availability| Check availability and notify admission staff if no match| Efficient resources allocation and communication|
+| Operating room slot selection| Room coordinator selects room slot and logs selection| Traceability and prevention of scheduling conflicts |
+| Anesthetist assignment| Coordinator selects anesthetist and sends notification| Coordination of surgical team with logged notification|
+| Anesthetist login | Anesthetist authenticates via Okta SSO and OAuth 2.0 + OIDC | Secure and traceable access for anesthetist|
+| Anesthetist request revision| Anesthetist reviews and  validates surgery request| Ensures accuracy and completeness of surgical planning|
+|Surgery planning finalization| QBLOC finalizes plan including team, room, duration, auto dispatch notifications| Comprehensive, auditable surgery schedule with automatic updates|
+| Surgery scheduled| End event with surgery successfully scheduled | Reliable surgery planning with full traceability|
+
+## Client IAM procedure development ##
+As an IAM consultant, after conducting interviews analyzing and validate the "TO BE BPMN" workflows, , I assisted the client in developing a specific, tailored robust, role-based and auditable procedure for surgery planning. My involvement ensured the integration of strong authentication, access controls, and traceability aligned with leading industry practices, thereby enhancing the security and governance of critical hospital systems managing patient admission and surgery planning.
+
+## IAM Procedure for Patient Admission and Surgery Planning ##
+### Purpose ### 
+To ensure secure, auditable, and compliant identity and access management controls are implemented for patient admission and surgery planning systems within the hospital's IT environment.
+### Scope ###
+Applicable to all hospital staff involved in patient admission (reception agents) and surgical planning (surgeons, anesthetists, room coordinators) using systems such as OASIS+ and QBLOC.
+
+### Responsibilities
+- Reception Agents, Surgeons, Anesthetists, Room Coordinators: Authenticate securely and perform only authorized actions based on assigned roles.
+- IAM Administrators: Configure and maintain identity providers, RBAC, MFA, and logging infrastructure.
+- Compliance Officers: Monitor audits, review access logs, and enforce soD policies.
+
+### Procedure Steps
+1. **User Authentication and Access Control**
+
+    - All users must authenticate via the hospital’s Identity Provider (Okta) employing MFA and Single Sign-On (SSO) using OAuth 2.0 + OIDC.
+
+    - Access to OASIS+ and QBLOC is controlled via Role-Based Access Control (RBAC) ensuring segregation of duties (SoD). Admission staff access is limited to administrative actions; surgical staff have role-specific capabilities.
+
+2. **Patient Admission Process**
+
+    - Reception agents search for patient records using validated identifiers (national number, name, DOB).
+
+    - If no record is found, agents create a new patient file with validation against the national registry.
+
+    - Insurance coverage is verified automatically; admission proceeds only if coverage is valid.
+
+    - All steps are logged with timestamps and user identifiers for auditability.
+
+3. **Surgery Planning Process**
+
+    - Surgeons initiate surgery requests by entering required procedure details in QBLOC after secure login.
+
+    - QBLOC performs automated patient identity and episode verification by querying OASIS+.
+
+    - Room coordinators allocate operating room slots and select anesthetists; all actions logged.
+
+    - Anesthetists receive notifications and authenticate via Okta to review and validate requests.
+
+    - Final surgery scheduling triggers automated dispatch to relevant teams and systems, with full traceability.
+
+4. **Audit and Monitoring**
+
+    - All authentication events, record creations, modifications, and scheduling operations must be logged.
+
+    - IAM administrators perform periodic access reviews and implement corrective actions when SoD violations or anomalies are detected.
+
+5. **Incident Management**
+
+    - Any suspicious access or compromise attempts must be reported immediately through the hospital’s security incident response process.
+
+6. **Training and Awareness**
+
+    - All users must receive regular training on secure access procedures and their responsibilities within IAM.
+
+7. **Review and Update**
+
+    - This procedure is reviewed annually or upon significant process or system changes to maintain effectiveness and compliance.
 
 ## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
@@ -133,7 +210,6 @@ The process lacks digital signature enforcement, leading to potential identity m
 |Transmission without encryption|Communication interception|
 
 ### 5.0.5.4 BPMN AS IS 
-
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/95ddd7e675a8b7c16fd5c132d26186274ff5755f/Patient_prescription_ASIS.PNG?raw=true)
 
 
