--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -133,65 +133,8 @@ This table details the secured and auditable surgical planning process in QBLOC,
 | Surgery scheduled| End event with surgery successfully scheduled | Reliable surgery planning with full traceability|
 
 ## Client IAM procedure development ##
-As an IAM consultant, after conducting interviews analyzing and validate the "TO BE BPMN" workflows, , I assisted the client in developing a specific, tailored robust, role-based and auditable procedure for surgery planning. My involvement ensured the integration of strong authentication, access controls, and traceability aligned with leading industry practices, thereby enhancing the security and governance of critical hospital systems managing patient admission and surgery planning.
+As an IAM consultant, after conducting interviews analyzing and validate the "TO BE BPMN" workflows, I assisted the client in developing a specific, tailored robust, role-based and auditable procedure for surgery planning. My involvement ensured the integration of strong authentication, access controls, and traceability aligned with leading industry practices, thereby enhancing the security and governance of critical hospital systems managing patient admission and surgery planning.
 
-## IAM Procedure for Patient Admission and Surgery Planning ##
-### Purpose ### 
-To ensure secure, auditable, and compliant identity and access management controls are implemented for patient admission and surgery planning systems within the hospital's IT environment.
-### Scope ###
-Applicable to all hospital staff involved in patient admission (reception agents) and surgical planning (surgeons, anesthetists, room coordinators) using systems such as OASIS+ and QBLOC.
-
-### Responsibilities
-- Reception Agents, Surgeons, Anesthetists, Room Coordinators: Authenticate securely and perform only authorized actions based on assigned roles.
-- IAM Administrators: Configure and maintain identity providers, RBAC, MFA, and logging infrastructure.
-- Compliance Officers: Monitor audits, review access logs, and enforce soD policies.
-
-### Procedure Steps
-1. **User Authentication and Access Control**
-
-    - All users must authenticate via the hospital’s Identity Provider (Okta) employing MFA and Single Sign-On (SSO) using OAuth 2.0 + OIDC.
-
-    - Access to OASIS+ and QBLOC is controlled via Role-Based Access Control (RBAC) ensuring segregation of duties (SoD). Admission staff access is limited to administrative actions; surgical staff have role-specific capabilities.
-
-2. **Patient Admission Process**
-
-    - Reception agents search for patient records using validated identifiers (national number, name, DOB).
-
-    - If no record is found, agents create a new patient file with validation against the national registry.
-
-    - Insurance coverage is verified automatically; admission proceeds only if coverage is valid.
-
-    - All steps are logged with timestamps and user identifiers for auditability.
-
-3. **Surgery Planning Process**
-
-    - Surgeons initiate surgery requests by entering required procedure details in QBLOC after secure login.
-
-    - QBLOC performs automated patient identity and episode verification by querying OASIS+.
-
-    - Room coordinators allocate operating room slots and select anesthetists; all actions logged.
-
-    - Anesthetists receive notifications and authenticate via Okta to review and validate requests.
-
-    - Final surgery scheduling triggers automated dispatch to relevant teams and systems, with full traceability.
-
-4. **Audit and Monitoring**
-
-    - All authentication events, record creations, modifications, and scheduling operations must be logged.
-
-    - IAM administrators perform periodic access reviews and implement corrective actions when SoD violations or anomalies are detected.
-
-5. **Incident Management**
-
-    - Any suspicious access or compromise attempts must be reported immediately through the hospital’s security incident response process.
-
-6. **Training and Awareness**
-
-    - All users must receive regular training on secure access procedures and their responsibilities within IAM.
-
-7. **Review and Update**
-
-    - This procedure is reviewed annually or upon significant process or system changes to maintain effectiveness and compliance.
 
 ## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
