--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -117,7 +117,7 @@ Surgery schedules can be modified without validation or traceability, leading to
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/764fa900541d19760ccedf748e89bb78426925f3/99_Support-documents/Surgery_planning_QBLOC_TO-BE.PNG?raw=true)
 *Figure 6 - TO-BE Surgery planning (QBLOC)*
 
-### 5.0.4.6 Benefits 
+### 5.0.4.6 Benefits
 This table details the secured and auditable surgical planning process in QBLOC, aligned with IGA, IDP, and PAM best practices to improve security, coordination, and compliance in the hospital surgical workflow.
 | **Process Step** | **Solution** | **Benefit** |
 |------------------|----------|----------|
@@ -132,13 +132,10 @@ This table details the secured and auditable surgical planning process in QBLOC,
 |Surgery planning finalization| QBLOC finalizes plan including team, room, duration, auto dispatch notifications| Comprehensive, auditable surgery schedule with automatic updates|
 | Surgery scheduled| End event with surgery successfully scheduled | Reliable surgery planning with full traceability|
 
-## Client IAM procedure development ##
-As an IAM consultant, after conducting interviews analyzing and validate the "TO BE BPMN" workflows, I assisted the client in developing a specific, tailored robust, role-based and auditable procedure for surgery planning. My involvement ensured the integration of strong authentication, access controls, and traceability aligned with leading industry practices, thereby enhancing the security and governance of critical hospital systems managing patient admission and surgery planning.
-
-
 ## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
 The process lacks digital signature enforcement, leading to potential identity misuse and non-compliance with eHealth and Recip-e standards.
+
 ## 5.0.5.1 Actors 
 - physician 
 ## 5.0.5.2 System involved 
@@ -154,6 +151,25 @@ The process lacks digital signature enforcement, leading to potential identity m
 
 ### 5.0.5.4 BPMN AS IS 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/95ddd7e675a8b7c16fd5c132d26186274ff5755f/Patient_prescription_ASIS.PNG?raw=true)
+*Figure 7 - AS-IS Medication prescription & therapeutic link verification (e-prescription / OASIS+)*
+### 5.0.5.5 BPMN TO BE 
+![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1f08e25ffac48d1e0230e8dd275aa2147f5fa59d/99_Support-documents/E-prescription_and_TL_validation.PNG?raw=true)
+*Figure 8 - TO-BE Medication prescription & therapeutic link verification (e-prescription / OASIS+)*
 
+### 5.0.5.6 Benefits 
+This approach provides secure, traceable, and patient-centered medication workflows, validating the TO BE BPMN as an aligned procedure with healthcare industry best practice.
 
+| **Process Step** | **Solution** | **Benefit** |
+|------------------|----------|----------|
+| Doctor begins prescription| Doctor authenticates using MFA (Okta, OAuth 2.0, OIDC| Secure, traceable access to sensitive information’s|
+|Assess patient and open OASIS+| Doctor uses verified login and patient ID card| Strong patient identification, accuracy in next steps|
+|Check therapeutic link via-e-Health portal| Real-time check/enforcement of doctor-patient relationship| Prevents unauthorized prescribing, ensures clinical safety|
+|Create/validate therapeutic link| Doctor provides justification for new therapeutic link| Clinical accountability, improves data integrity|
+|Encode medication and use e-prescription| OASIS+ logs, prescription is digital and auditable| Reduces prescription errors, enables tracking and improvements|
+|Administer medication| Doctor follows secure steps with traceability| Ensures right patient and medication, auditability|
+| Complete and provide ID card back to patient| End with secure e-prescription, ID verification| Patient data privacy, compliance, and process finalization|
 
+### 5.0.5.7 Client IAM procedure development 
+As an IAM consultant, after conducting interviews, analyzing, and validating the "TO BE" BPMN workflows for patient admission, surgery planning, medication prescription, and appointment scheduling, I assisted the client in developing a specific, tailored, robust, role-based, and auditable IAM procedure. My involvement ensured the integration of strong authentication mechanisms such as MFA and SSO, precise access controls via RBAC and ABAC, and comprehensive traceability aligned with leading industry practices. This procedure significantly enhances the security, compliance, and governance of critical hospital systems managing these vital healthcare processes, thereby supporting operational efficiency and protecting sensitive patient information.
+
+[Official procedure]()
