--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -172,4 +172,4 @@ This approach provides secure, traceable, and patient-centered medication workfl
 ### 5.0.5.7 Client IAM procedure development 
 As an IAM consultant, after conducting interviews, analyzing, and validating the "TO BE" BPMN workflows for patient admission, surgery planning, medication prescription, and appointment scheduling, I assisted the client in developing a specific, tailored, robust, role-based, and auditable IAM procedure. My involvement ensured the integration of strong authentication mechanisms such as MFA and SSO, precise access controls via RBAC and ABAC, and comprehensive traceability aligned with leading industry practices. This procedure significantly enhances the security, compliance, and governance of critical hospital systems managing these vital healthcare processes, thereby supporting operational efficiency and protecting sensitive patient information.
 
-[Official procedure]()
+[Official procedure](../çç_Support-documents/Official_procedure_CHR_Hospital)
